Removing getFirst()
This for some reason isn't compiling here, but working perfectly fine when I run it locally. I'll try changing it to get(0) to see if that helps but I'm really not sure why there's a problem here.